# ts3-liebe

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: liebe.sln  liebe.vcxproj  plugin.c  plugin.h
